[package]
authors = ["Sam Crow <samcrow@uw.edu>"]
name = "xplm"
version = "0.5.0"
license = "MIT/Apache-2.0"
repository = "https://github.com/samcrow/rust-xplm"
keywords = ["X-Plane", "plugin"]
description = "High-level interfaces to the X-Plane plugin SDK"
readme = "README.md"
edition = "2024"

[dependencies]
xplm-sys = { git = "https://github.com/pcaracal/xplm-sys.git" }
thiserror = "2.0.18"

[profile.release]
opt-level = 3
lto = true
incremental = true
codegen-units = 1
strip = "symbols"

[[example]]
name = "minimal"
crate-type = ["cdylib"]

[[example]]
name = "dataref"
crate-type = ["cdylib"]

[[example]]
name = "menus"
crate-type = ["cdylib"]
